[ENG-6735] Fix placeholders hiding on tablet/mobile views (#869)
Fix issues

--- a/src/components/common/AppConfigPreview.scss
+++ b/src/components/common/AppConfigPreview.scss
@@ -8,11 +8,7 @@
   width: 150px;
   height: 150px;
   background-color: $white;
-  &__no-preview {
-    @include tablet() {
-      display: none;
-    }
-  }
+
   @include border();
 
   a {
